--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "base62": "^2.0.0",
     "mysql": "^2.16.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "sync-request": "^6.0.0"
   },
   "devDependencies": {},
   "scripts": {
